# agentfield

./: .gitignore  .goreleaser.yml  CHANGELOG.md  README.md  VERSION
.github/workflows/: control-plane.yml  desktop.yml  release.yml
control-plane/cmd/af/: main.go
control-plane/cmd/af-tray/: shared.go  shared_test.go  tray_darwin.go
control-plane/cmd/agentfield-server/: main.go
control-plane/config/: agentfield.yaml
control-plane/internal/cli/: agent_commands.go  agent_helpers_test.go  coverage_gap_additional_test.go  doctor.go  logs.go  logs_tail_test.go  ls_reasoners.go  ops_additional_test.go  proc_unix.go  proc_unix_test.go  proc_windows.go  ps.go  ps_test.go  root.go  secrets.go  skill.go  skill_additional_test.go  stop.go
control-plane/internal/cli/commands/: install.go
control-plane/internal/config/: config.go  config_additional_test.go
control-plane/internal/core/services/: agent_service.go  coverage_additional_test.go  coverage_gap_test.go  dev_service_test.go  mocks_fs_test.go
control-plane/internal/handlers/: coverage_additional_test.go  coverage_handlers_92_target_test.go  discovery.go  discovery_test.go  execute.go  executions_active.go  executions_active_test.go  nodes_register.go  nodes_rest.go  nodes_rest_test.go  reasoner_catalog.go  reasoner_catalog_test.go  webhook_approval.go  workflow_execution_events_test.go
control-plane/internal/handlers/agentic/: bm25.go  bm25_test.go  helpers.go  load.go  load_test.go  reasoners.go  reasoners_test.go
control-plane/internal/handlers/ui/: coverage_dashboard_additional_test.go  coverage_nodes_dashboard_summary_test.go  dashboard.go  dashboard_aggregate.go
control-plane/internal/infrastructure/process/: port_manager.go
control-plane/internal/server/: routes_agentic.go  routes_core.go  routes_ui.go  server.go  startguard.go  startguard_test.go
control-plane/internal/server/apicatalog/: catalog_entries.go
control-plane/internal/server/knowledgebase/: content.go
control-plane/internal/server/middleware/: auth.go  auth_test.go
control-plane/internal/services/: health_monitor.go  health_monitor_test.go  status_manager.go  status_manager_test.go
control-plane/internal/skillkit/: catalog.go  catalog_agentfield_use_test.go  embed.go  targets.go
control-plane/internal/sources/generichmac/: hmac.go  hmac_test.go
control-plane/internal/storage/: execution_records.go  execution_records_test.go  helpers_test.go  utils.go
control-plane/internal/templates/: templates.go
control-plane/internal/templates/go/: go.mod.tmpl
control-plane/internal/templates/python/: main.py.tmpl
control-plane/pkg/types/: execution.go  types.go
control-plane/web/client/: package-lock.json  package.json  pnpm-lock.yaml
desktop/: .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
desktop/scripts/: bundle-cli.mjs  macos-adhoc-sign.mjs  make-icons.mjs
desktop/src/main/: agentfield.test.ts  agentfield.ts  agents.test.ts  agents.ts  autostart.test.ts  autostart.ts  cli.test.ts  cli.ts  env.test.ts  env.ts  index.ts  installer.test.ts  installer.ts  secrets.test.ts  secrets.ts  settings.test.ts  settings.ts  tray-companion.test.ts  tray-companion.ts  tray-model.test.ts  tray-model.ts  tray.ts  updates.test.ts  updates.ts
desktop/src/preload/: index.ts
desktop/src/renderer/: index.html
desktop/src/renderer/src/: App.tsx  env.d.ts  styles.css
desktop/src/shared/: catalog.ts  deeplink.test.ts  deeplink.ts  types.ts
examples/benchmarks/100k-scale/mastra-bench/: package-lock.json
examples/python_agent_nodes/agentic_rag/: requirements.txt
examples/python_agent_nodes/documentation_chatbot/: requirements.txt
examples/python_agent_nodes/hello_world_rag/: requirements.txt
scripts/: install.sh  sync-embedded-skills.sh
sdk/go/agent/: agent.go  agent_lifecycle.go  agent_lifecycle_test.go
sdk/go/ai/: client.go  media_integration_test.go  media_provider.go  media_provider_test.go  model_params.go  model_params_test.go  openrouter_media.go  openrouter_media_coverage_test.go  openrouter_media_routing_test.go
sdk/go/types/: types.go
sdk/python/: pyproject.toml
sdk/python/agentfield/: __init__.py  agent.py  agent_ai.py  async_execution_manager.py  async_lifecycle.py  http_connection_manager.py  media_providers.py  multimodal_response.py  result_cache.py  vision.py
sdk/python/agentfield/harness/: _cli.py
sdk/python/agentfield/harness/providers/: opencode.py
sdk/python/tests/: test_async_lifecycle_deadlock.py  test_harness_cli.py  test_harness_provider_opencode.py  test_media_integration.py  test_openrouter_audio.py  test_reasoner_descriptions.py  test_result_cache_deadlock.py
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: index.ts
sdk/typescript/tests/: media_integration.test.ts  openrouter_media_routing.test.ts  triggers.test.ts
skills/agentfield/: SKILL.md
skills/agentfield/references/: anti-patterns.md  examples-map.md  live-docs.md  model-selection.md  primitives-snapshot.md  project-claude-template.md  triggers.md  verification.md
(+27 files in other folders)
